Issue#21 mermaid 流程图没有转换为图片 feat(settings): 添加自定义 Pandoc Filters 支持
- 配置文件新增 pandoc_filters 字段，支持设置多个自定义 Pandoc Filter
- Pandoc 集成模块支持加载并应用自定义 Filters，支持 lua 脚本和可执行文件
- 工作流处理转换时传递自定义 Filters 参数，支持 mermaid-filter 等扩展
- 设置界面添加 Pandoc Filters 配置区域，支持添加、移除、排序和编辑 Filters 路径
- 英文及中文文档中新增 Pandoc Filters 说明和使用示例
- 添加转换大文件时的转换开始通知信息提醒用户
- 相关默认配置和多语言资源同步更新，包含界面

--- a/pastemd/i18n/locales/en.json
+++ b/pastemd/i18n/locales/en.json
@@ -65,6 +65,14 @@
     "settings.conversion.first_paragraph_heading": "First paragraph formatting",
     "settings.conversion.md_indent": "Markdown: disable special first-paragraph style after headings",
     "settings.conversion.html_indent": "HTML: disable special first-paragraph style after headings",
+    "settings.conversion.pandoc_filters": "Pandoc Filters, apply more complex conversions",
+    "settings.conversion.pandoc_filters_note": "(Execution order: top to bottom)",
+    "settings.conversion.add_filter": "Add...",
+    "settings.conversion.remove_filter": "Remove",
+    "settings.conversion.move_up": "↑",
+    "settings.conversion.move_down": "↓",
+    "settings.conversion.filter_resources_link1_text": "Official Pandoc Filters List",
+    "settings.conversion.filter_resources_link2_text": "Lua Filters Documentation",
     "settings.conversion.keep_formula": "Keep original math formula (no conversion)",
     "settings.conversion.enable_latex_replacements": "Auto-fix incompatible LaTeX syntax",
     "settings.conversion.latex_replacements_note": "(e.g., replace {\\kern 10pt} with \\qquad)",
@@ -76,12 +84,16 @@
     "settings.error.save_failed": "Failed to save settings: {error}",
     "settings.file_type.executable": "Executable",
     "settings.file_type.word_doc": "Word Document",
+    "settings.file_type.lua_script": "Lua Script",
     "settings.file_type.all_files": "All Files",
     "settings.title.success": "Success",
     "settings.title.error": "Error",
     "settings.dialog.select_save_dir": "Select Save Directory",
     "settings.dialog.select_pandoc": "Select Pandoc Executable",
     "settings.dialog.select_ref_docx": "Select Reference Document",
+    "settings.dialog.select_filter": "Select Pandoc Filter",
+    "settings.dialog.edit_filter": "Edit Filter Path",
+    "settings.dialog.filter_path": "Filter Path:",
     "tray.error.config_reload_failed": "Failed to reload configuration",
     "tray.error.hotkey_save_failed": "Failed to save hotkey: {error}",
     "tray.error.open_about_page": "Unable to open the browser. Please visit the about page manually:\n{url}",
@@ -153,6 +165,7 @@
     "workflow.html.insert_success": "Inserted HTML content into {app}.",
     "workflow.insert_failed_no_app": "Unable to insert into {app}. Make sure the app is focused and ready.",
     "workflow.markdown.convert_failed": "Markdown conversion failed. Please verify the format.",
+    "workflow.markdown.conversion_started": "Large file detected ({lines} lines), converting, please wait...",
     "workflow.no_app_detected": "No supported application detected. Open Word/WPS/Excel or enable auto-open.",
     "workflow.pandoc.init_failed": "Failed to initialize Pandoc. Check your configuration and environment.",
     "workflow.table.export_failed": "Failed to generate the table.",
