--- a/pastemd/i18n/locales/zh.json
+++ b/pastemd/i18n/locales/zh.json
@@ -65,6 +65,14 @@
     "settings.conversion.first_paragraph_heading": "是否禁用首段格式",
     "settings.conversion.md_indent": "Markdown：禁用标题后首段特殊格式",
     "settings.conversion.html_indent": "HTML：禁用标题后首段特殊格式",
+    "settings.conversion.pandoc_filters": "Pandoc Filters过滤器，用于更多复杂转换",
+    "settings.conversion.pandoc_filters_note": "（执行顺序从上到下）",
+    "settings.conversion.add_filter": "添加...",
+    "settings.conversion.remove_filter": "移除",
+    "settings.conversion.move_up": "↑",
+    "settings.conversion.move_down": "↓",
+    "settings.conversion.filter_resources_link1_text": "Pandoc Filters 官方列表",
+    "settings.conversion.filter_resources_link2_text": "Lua Filters 文档",
     "settings.conversion.keep_formula": "保留原始数学公式 (不转换)",
     "settings.conversion.enable_latex_replacements": "自动修复不兼容的 LaTeX 语法",
     "settings.conversion.latex_replacements_note": "（例如：将 {\\kern 10pt} 替换为 \\qquad）",
@@ -76,12 +84,16 @@
     "settings.error.save_failed": "保存设置失败: {error}",
     "settings.file_type.executable": "可执行文件",
     "settings.file_type.word_doc": "Word 文档",
+    "settings.file_type.lua_script": "Lua 脚本",
     "settings.file_type.all_files": "所有文件",
     "settings.title.success": "成功",
     "settings.title.error": "错误",
     "settings.dialog.select_save_dir": "选择保存目录",
     "settings.dialog.select_pandoc": "选择 Pandoc 可执行文件",
     "settings.dialog.select_ref_docx": "选择参考文档",
+    "settings.dialog.select_filter": "选择 Pandoc Filter",
+    "settings.dialog.edit_filter": "编辑 Filter 路径",
+    "settings.dialog.filter_path": "Filter 路径：",
     "tray.error.config_reload_failed": "配置重载失败",
     "tray.error.hotkey_save_failed": "保存热键失败：{error}",
     "tray.error.open_about_page": "无法打开浏览器，请手动访问关于页面\n{url}",
@@ -153,6 +165,7 @@
     "workflow.html.insert_success": "已从网页 HTML 插入到 {app}。",
     "workflow.insert_failed_no_app": "未能插入到 {app}，请确认软件已打开且有光标。",
     "workflow.markdown.convert_failed": "Markdown 转换失败，请检查格式。",
+    "workflow.markdown.conversion_started": "检测到较大文件（{lines} 行），正在转换，请稍候...",
     "workflow.no_app_detected": "未检测到支持的应用。请打开 Word/WPS/Excel 或启用自动打开。",
     "workflow.pandoc.init_failed": "Pandoc 初始化失败，请检查设置及是否配置环境。",
     "workflow.table.export_failed": "生成表格失败。",
