feat(workflow): 添加跨工作流应用冲突检查，优化应用配置管理

--- a/pastemd/i18n/locales/en-US.json
+++ b/pastemd/i18n/locales/en-US.json
@@ -88,6 +88,9 @@
     "settings.extensions.description": "Note: HTML paste is suitable for Notion, Yuque etc.; Markdown paste is suitable for Obsidian and other native MD editors.",
     "settings.extensions.reserved_app_error": "Application {app} is reserved (Word/WPS/Excel) and cannot be added.",
     "settings.extensions.app_exists": "Application {app} is already in the list.",
+    "settings.extensions.app_conflict_error": "Application {app} already exists in '{workflow}' workflow. An application can only be configured for one paste mode.",
+    "settings.extensions.config_conflict_warning": "Detected cross-workflow application conflicts in configuration:\n\n{conflicts}\n\nPlease fix the configuration. An application can only be configured for one paste mode.\nConflicting applications may cause unpredictable paste behavior.",
+    "settings.title.warning": "Warning",
     "settings.extensions.no_running_apps": "No running applications detected.",
     "settings.extensions.unsupported_platform": "This feature is not supported on the current platform.",
     "settings.extensions.win32_import_error": "Failed to import Windows API module.",
