--- a/pastemd/i18n/locales/zh-CN.json
+++ b/pastemd/i18n/locales/zh-CN.json
@@ -88,6 +88,9 @@
     "settings.extensions.description": "注：HTML 粘贴适合 Notion、语雀等笔记软件；Markdown 粘贴适合 Obsidian 等原生 MD 编辑器。",
     "settings.extensions.reserved_app_error": "应用 {app} 是保留应用（Word/WPS/Excel），无法添加。",
     "settings.extensions.app_exists": "应用 {app} 已在列表中。",
+    "settings.extensions.app_conflict_error": "应用 {app} 已在「{workflow}」工作流中存在，一个应用只能配置为一种粘贴模式。",
+    "settings.extensions.config_conflict_warning": "检测到配置中存在跨工作流应用冲突：\n\n{conflicts}\n\n请修正配置，一个应用只能配置为一种粘贴模式。\n当前冲突的应用可能导致粘贴行为不可预期。",
+    "settings.title.warning": "警告",
     "settings.extensions.no_running_apps": "没有检测到正在运行的应用。",
     "settings.extensions.unsupported_platform": "当前平台不支持此功能。",
     "settings.extensions.win32_import_error": "无法导入 Windows API 模块。",
